2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b99

	* Added support to disable auto rotate on add-item in gallery
	  remote.

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b98

	* Change: Use $borderColor instead of white when album_thumb_frame_style="dots"

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b97

	* Language: Update Bulgarian (bg_BG), German (de_DE)

	* Language: New Language Catalan (ca_ES) 

	* Language: Synced against changes

	* Change: Tweaked ml_pulldown.inc for flags to see which language is current.

2003-09-26 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b96
	
	* Print progress information when upgrading users, so we don't get
	  "it just hangs" error reports.

2003-09-25  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b95

	* Bugfix: "send password" link was not visible in login.php

	* Bugfix: Anker Tag <a ...></a> around a table is not allowed.
		  Caused albums thumbs to be no link

	* Change: Startpage is valid html again.

	* New: Frame around album thumbs is now configurable

	* Language: Synced against changes

2003-09-24  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b94

	* Modified code around locale alias
	  - Changed behaviour for "optional" back to behaviour <= 1.4.1-cvs-b80
	  - Improved locales alias handling for:
		o Systems without gettext
		o Systems where we cant detect system locales
		o Systems where are some system locales missing, some not
	  - Added "remove_empty" and "allow_empty" for constants
	  - removed function test_locale() from setup/functions.inc

	* Added function gettext_installed() in util.php which returns true or false

	* Use "allow_empty" for slideshow length

	* Fixed somes typos

2003-09-24 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b93

	* Set border="0" for images in frame, so they do not get highlighted.

	* Removed 2 short php tags (oops!).  Thanks Jesse.

2003-09-23  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b92
