@@ -1,3 +1,8 @@
+2003-09-26  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.1-cvs-b100
+
+	* Changed autoRotate to auto_rotate in gallery_remote2.php for
+	  protocol consistency, added debugging statements.
+
 2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b99
 
 	* Added support to disable auto rotate on add-item in gallery
